--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
   <!-- Page 1: Heartfelt message -->
   <section id="page1" class="page active" role="main" aria-label="Heartfelt message page">
     <h1>Hey baby 😘</h1>
-    <p class="subtitle">Mel, you are the one that I feel comfortable talking to. You are a sweet girl, funny, cantik, and even the moments we talk without me knowing how exactly you look like. Turns out I talk to a pretty girl, can't believe it.</p>
+    <p class="subtitle">Mel, tu es la personne avec qui je me sens le plus à l’aise pour parler. Tu es douce, drôle et belle, même à l’époque où on parlait sans que je sache vraiment à quoi tu ressemblais. Et maintenant que je sais… je n’en reviens toujours pas à quel point tu es jolie.</p>
     <button class="yes-btn" type="button" id="toPage2Btn" aria-label="Go to next page: Forgiveness request">
       Next
     </button>
