--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Mel, Please Forgive Me</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 <style>
-  /* CSS Variables for pink romantic theme */
   :root {
     --pink-light: #ffe3ec;
     --pink-medium: #ff5f87;
@@ -15,8 +16,6 @@
     --bg-gradient: linear-gradient(135deg, #ffc3cc 0%, #ff8ba3 100%);
     --font-sans: 'Poppins', 'Helvetica Neue', Arial, sans-serif;
   }
-
-  /* Reset and base */
   *, *::before, *::after {
     box-sizing: border-box;
   }
@@ -43,12 +42,11 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding: 0 24px;
   }
-
-  /* Common styles for pages */
   section.page {
     flex-grow: 1;
-    padding: 3rem 2rem 4rem;
+    padding: 3rem 0 4rem;
     display: none;
     flex-direction: column;
     align-items: center;
@@ -58,13 +56,23 @@
   section.page.active {
     display: flex;
   }
-
   h1 {
-    font-size: 2.8rem;
     font-weight: 700;
     margin-bottom: 1rem;
     color: var(--pink-dark);
     text-shadow: 0 0 6px var(--pink-light);
+  }
+  #page2 h1 {
+    font-weight: 900;
+    font-size: 3rem;
+    margin-bottom: 0;
+  }
+  #page2 h2 {
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: var(--pink-medium);
+    margin-top: 16px;
+    margin-bottom: 3rem;
   }
   p.subtitle {
     font-size: 1.3rem;
@@ -72,16 +80,14 @@
     margin-bottom: 3rem;
     font-weight: 600;
   }
-
-  /* Buttons */
   .btn-group {
-    position: relative;
-    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    min-height: 120px;
+    gap: 1.25rem;
+    flex-wrap: nowrap;
+    justify-content: center;
+    position: relative;
+    min-height: 64px;
+    width: 100%;
   }
   button {
     cursor: pointer;
@@ -92,6 +98,8 @@
     border: none;
     transition: background-color 0.3s ease, transform 0.2s ease;
     user-select: none;
+    position: relative;
+    min-width: 140px;
   }
   button:focus {
     outline-offset: 4px;
@@ -100,34 +108,31 @@
   button:active {
     transform: scale(0.95);
   }
-
   button.yes-btn {
     background: var(--pink-dark);
     color: white;
     box-shadow: 0 4px 10px rgba(176, 0, 58, 0.6);
-    position: relative;
-    z-index: 2;
-    width: 160px;
   }
   button.yes-btn:hover {
     background: #d80044;
     transform: scale(1.05);
   }
-
   button.no-btn {
     background: var(--pink-light);
     color: var(--pink-dark);
     box-shadow: 0 4px 10px rgba(255, 195, 204, 0.9);
-    position: fixed;
-    width: 160px;
+    position: fixed !important;
+    z-index: 10000;
+    min-width: 140px;
     padding: 0.8rem 2.2rem;
-    user-select: none;
-    z-index: 999;
     border-radius: 1rem;
-    transition: none;
+    cursor: pointer;
+    user-select: none;
+    transition: none !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
-
-  /* Heart trail container */
   #heart-trail {
     position: fixed;
     pointer-events: none;
@@ -136,9 +141,8 @@
     height: 100vh;
     width: 100vw;
     overflow: visible;
-    z-index: 10000;
+    z-index: 9999;
   }
-
   .heart {
     position: absolute;
     font-size: 14px;
@@ -151,8 +155,18 @@
     0% {opacity: 1; transform: scale(1);}
     100% {opacity: 0; transform: scale(1.8) translateY(-20px);}
   }
-
-  /* Page 3 styles: floating hearts */
+  #page4 .thank-you-text {
+    font-weight: 700;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    color: var(--pink-dark);
+  }
+  #page4 .sub-text {
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--pink-medium);
+    margin-bottom: 2rem;
+  }
   .floating-hearts {
     position: absolute;
     inset: 0;
@@ -169,6 +183,7 @@
     opacity: 0.8;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    animation-name: floatUp;
   }
   @keyframes floatUp {
     0% {
@@ -183,8 +198,6 @@
       opacity: 0;
     }
   }
-
-  /* Page 4 pig container */
   .pig-area {
     position: relative;
     width: 100%;
@@ -192,7 +205,6 @@
     margin-top: 1rem;
     overflow: visible;
   }
-  /* Pig common style */
   .pig {
     position: absolute;
     bottom: 0;
@@ -200,7 +212,6 @@
     height: 100px;
     cursor: default;
   }
-  /* pig body */
   .pig-body {
     position: relative;
     width: 120px;
@@ -209,7 +220,6 @@
     border-radius: 80% 80% 60% 60% / 70% 70% 30% 30%;
     box-shadow: inset -5px 5px 0 0 #e99cb0;
   }
-  /* pig ears */
   .pig-ear {
     position: absolute;
     top: 0;
@@ -227,7 +237,6 @@
     right: 18px;
     transform: rotate(20deg);
   }
-  /* pig eyes */
   .pig-eye {
     position: absolute;
     top: 34px;
@@ -254,7 +263,6 @@
     background: #70002f;
     border-radius: 50%;
   }
-  /* pig snout */
   .pig-snout {
     position: absolute;
     bottom: 8px;
@@ -280,15 +288,12 @@
   .pig-snout-nostril.right {
     right: 10px;
   }
-
-  /* Pig animations: walking side to side */
   .pig.walking {
     animation: walk-left-right 5s ease-in-out infinite;
   }
   .pig.jumping {
     animation: jump-up-down 3s ease-in-out infinite;
   }
-
   @keyframes walk-left-right {
     0%, 100% {
       transform: translateX(0) translateY(0);
@@ -305,8 +310,6 @@
       transform: translateY(-40px) scale(1.05);
     }
   }
-
-  /* Love icons near pigs */
   .love-icon {
     position: absolute;
     width: 20px;
@@ -331,30 +334,6 @@
     50% {transform: translateY(-20px) scale(1.1);}
     100% {transform: translateY(0) scale(1);}
   }
-
-  /* Page 3 thank you text */
-  #page3 .thank-you-text {
-    font-weight: 700;
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
-    color: var(--pink-dark);
-  }
-  #page3 .sub-text {
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: var(--pink-medium);
-    margin-bottom: 2rem;
-  }
-
-  /* Page 4 cochon text */
-  #page4 p.sub-text {
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: var(--pink-dark);
-    margin-top: 1rem;
-  }
-
-  /* Responsive */
   @media (max-width: 600px) {
     #app {
       max-width: 360px;
@@ -367,60 +346,55 @@
       font-size: 1rem;
       padding: 0.7rem 1.5rem;
     }
-    .pig {
-      width: 100px;
-      height: 80px;
-    }
-    .pig-body {
-      width: 100px;
-      height: 70px;
-    }
   }
 </style>
 </head>
 <body>
 <div id="heart-trail"></div>
-<div id="app" aria-live="polite">
-  <!-- Page 1: Heartfelt message -->
-  <section id="page1" class="page active" role="main" aria-label="Heartfelt message page">
+
+<div id="app" aria-live="polite" style="position:relative;">
+  <!-- Page 1 -->
+  <section id="page1" class="page active" role="main" aria-label="Page 1">
     <h1>Hey baby 😘</h1>
-    <p class="subtitle">Mel, tu es la personne avec qui je me sens le plus à l’aise pour parler. Tu es douce, drôle et belle, même à l’époque où on parlait sans que je sache vraiment à quoi tu ressemblais. Et maintenant que je sais… je n’en reviens toujours pas à quel point tu es jolie.</p>
-    <button class="yes-btn" type="button" id="toPage2Btn" aria-label="Go to next page: Forgiveness request">
-      Next
-    </button>
+    <p class="subtitle">
+      Mel, tu es la personne avec qui je me sens le plus à l’aise pour parler. Tu es douce, drôle et belle, même à l’époque où on parlait sans que je sache vraiment à quoi tu ressemblais. Et maintenant que je sais… je n’en reviens toujours pas à quel point tu es jolie.
+    </p>
+    <button class="yes-btn" id="toPage2Btn">Next</button>
   </section>
 
-  <!-- Page 2: Forgiveness request -->
-  <section id="page2" class="page" role="main" aria-label="Forgiveness request page">
+  <!-- Page 2 -->
+  <section id="page2" class="page" role="main" aria-label="Page 2">
+    <h1>Donc</h1>
+    <h2>Let’s dream about each other again?</h2>
+    <p class="subtitle">Let’s share our days again, our future, our memories, our random thoughts, random reels.</p>
+    <button class="yes-btn" id="toPage3Btn">Next</button>
+  </section>
+
+  <!-- Page 3 -->
+  <section id="page3" class="page" role="main" aria-label="Page 3" style="position:relative;">
     <h1>Mel, please forgive me</h1>
     <p class="subtitle">Will you forgive me?</p>
-    <div class="btn-group">
-      <button class="yes-btn" type="button" id="yesBtn" aria-label="Yes I will forgive you">
-        Yes I will
-      </button>
-      <button class="no-btn" type="button" id="noBtn" aria-label="No, leave me alone">
-        No, leave me alone
-      </button>
+    <div class="btn-group" style="position:relative; min-height: 64px; width: 100%;">
+      <button class="yes-btn" id="yesBtn" style="position: relative; z-index: 2;">Yes I will</button>
+      <button class="no-btn" id="noBtn" style="position: fixed;">No, leave me alone</button>
     </div>
   </section>
 
-  <!-- Page 3: Thank you -->
-  <section id="page3" class="page" role="main" aria-label="Thank you page">
+  <!-- Page 4 -->
+  <section id="page4" class="page" role="main" aria-label="Page 4">
     <h1>Thank You!</h1>
-    <p class="thank-you-text">You are so sweet ❤️</p>
-    <p class="sub-text">Thank you for your forgiveness, Mel!</p>
-    <div class="floating-hearts" aria-hidden="true"></div>
-    <button class="yes-btn" type="button" id="toPage4Btn" aria-label="Go to next page: Cochon pigs">
-      Next
-    </button>
+    <p class="thank-you-text">You are so sweet, beautiful ❤️</p>
+    <p class="sub-text">
+      I know how much I hurt you, and I am now aware that I did a mistake. I don’t want that to make us apart. Since you have forgiven me, I would not hurt you again. I will try to communicate better, treat you better. Okay?
+    </p>
+    <div class="floating-hearts"></div>
+    <button class="yes-btn" id="toPage5Btn">Next</button>
   </section>
 
-  <!-- Page 4: Cute pigs animation -->
-  <section id="page4" class="page" role="main" aria-label="Cochon pigs animation page">
-    <p class="sub-text" style="font-weight:700; font-size:1.8rem; margin-bottom:1rem; color: var(--pink-dark);">
-      Can't wait to talk to you again. I miss you so much
-    </p>
-    <div class="pig-area" aria-hidden="true">
+  <!-- Page 5 -->
+  <section id="page5" class="page" role="main" aria-label="Page 5">
+    <h1>Can't wait to talk to you again. I miss you so much!</h1>
+    <div class="pig-area">
       <div class="pig walking" style="left: 20px;">
         <div class="pig-body"></div>
         <div class="pig-ear left"></div>
@@ -447,14 +421,13 @@
       <div class="love-icon right"></div>
     </div>
     <p class="sub-text">I am the best cochon in the world!</p>
+    <p class="sub-text">Stay with me, talk to me, please</p>
   </section>
 </div>
 
 <script>
   // Heart trail effect
   const heartTrail = document.getElementById('heart-trail');
-  const maxHearts = 20;
-
   function createHeart(x, y) {
     const heart = document.createElement('div');
     heart.className = 'heart';
@@ -462,94 +435,63 @@
     heart.style.top = y + 'px';
     heart.textContent = '❤️';
     heartTrail.appendChild(heart);
-
-    setTimeout(() => {
-      heart.remove();
-    }, 900);
+    setTimeout(() => heart.remove(), 900);
   }
+  window.addEventListener('mousemove', e => createHeart(e.clientX, e.clientY));
 
-  window.addEventListener('mousemove', (e) => {
-    createHeart(e.clientX, e.clientY);
-  });
-
-  // Page switch helper
+  // Show page helper
   function showPage(id) {
-    document.querySelectorAll('section.page').forEach(page => {
-      page.classList.remove('active');
-    });
+    document.querySelectorAll('section.page').forEach(p => p.classList.remove('active'));
     const page = document.getElementById(id);
-    if (page) {
-      page.classList.add('active');
-      page.querySelector('button, h1, p')?.focus?.();
-    }
+    page.classList.add('active');
+    const focusEl = page.querySelector('button, h1, p');
+    if(focusEl && typeof focusEl.focus === 'function') focusEl.focus();
   }
 
-  // Page 1 button -> go to page 2
-  const toPage2Btn = document.getElementById('toPage2Btn');
-  toPage2Btn.addEventListener('click', () => {
-    showPage('page2');
-    moveNoButtonRandomly();
-  });
+  // Navigation buttons
+  document.getElementById('toPage2Btn').onclick = () => showPage('page2');
+  document.getElementById('toPage3Btn').onclick = () => showPage('page3');
+  document.getElementById('toPage5Btn').onclick = () => showPage('page5');
 
-  // Page 2 - "No" button random movement logic
-  const noBtn = document.getElementById('noBtn');
-  const yesBtn = document.getElementById('yesBtn');
-
-  function moveNoButtonRandomly() {
-    const btnRect = noBtn.getBoundingClientRect();
-    const viewportWidth = window.innerWidth;
-    const viewportHeight = window.innerHeight;
-
-    // Calculate max left and top to prevent clipping
-    const maxLeft = viewportWidth - btnRect.width - 20;
-    const maxTop = viewportHeight - btnRect.height - 20;
-
-    // Generate random left and top inside viewport with offsets
-    const left = Math.random() * maxLeft + 10;
-    const top = Math.random() * maxTop + 10;
-
-    noBtn.style.left = left + 'px';
-    noBtn.style.top = top + 'px';
-  }
-
-  noBtn.style.position = 'fixed'; // ensure fixed positioning
-
-  moveNoButtonRandomly();
-
-  noBtn.addEventListener('mouseenter', () => {
-    moveNoButtonRandomly();
-  });
-  noBtn.addEventListener('click', (e) => {
-    e.preventDefault();
-    moveNoButtonRandomly();
-  });
-
-  // Yes button click -> go to page 3
-  yesBtn.addEventListener('click', () => {
-    showPage('page3');
-    initFloatingHearts();
-  });
-
-  // Page 3 button -> next page 4
-  const toPage4Btn = document.getElementById('toPage4Btn');
-  toPage4Btn.addEventListener('click', () => {
+  // "Yes I will" on page 3 goes to page 4 + init floating hearts
+  document.getElementById('yesBtn').onclick = () => {
     showPage('page4');
+    initFloatingHearts();
+  };
+
+  // Move "No, leave me alone" button around the viewport on each click
+  const noBtn = document.getElementById('noBtn');
+
+  function moveNoButton() {
+    const btnWidth = noBtn.offsetWidth;
+    const btnHeight = noBtn.offsetHeight;
+    const padding = 20;
+    const maxLeft = window.innerWidth - btnWidth - padding;
+    const maxTop = window.innerHeight - btnHeight - padding;
+    const left = Math.random() * maxLeft + padding;
+    const top = Math.random() * maxTop + padding;
+    noBtn.style.left = `${left}px`;
+    noBtn.style.top = `${top}px`;
+    noBtn.style.transform = 'none';
+  }
+  moveNoButton();
+
+  noBtn.addEventListener('click', e => {
+    e.preventDefault();
+    moveNoButton();
   });
 
-  // Page 3 floating hearts
-  const floatingHeartsContainer = document.querySelector('#page3 .floating-hearts');
-  let floatingHearts = [];
+  // Floating hearts on page 4
+  const floatingHeartsContainer = document.querySelector('#page4 .floating-hearts');
+  const floatingHearts = [];
   function initFloatingHearts() {
-    if (floatingHearts.length) return; // Only init once
-
-    const heartCount = 30;
-    for(let i=0; i < heartCount; i++) {
+    if (floatingHearts.length) return;
+    for (let i = 0; i < 30; i++) {
       const heart = document.createElement('div');
       heart.className = 'floating-heart';
       heart.style.left = Math.random() * 100 + 'vw';
-      const duration = 4 + Math.random() * 4;
-      heart.style.animationDuration = duration + 's';
-      heart.style.animationDelay = -Math.random() * duration + 's';
+      heart.style.animationDuration = (4 + Math.random() * 4) + 's';
+      heart.style.animationDelay = -Math.random() * 8 + 's';
       floatingHeartsContainer.appendChild(heart);
       floatingHearts.push(heart);
     }
@@ -557,4 +499,3 @@
 </script>
 </body>
 </html>
-
